src/components/SideBar/styles.scss
@import '../../styles/colors.scss';
@import '../../styles/fonts.scss';

$sidebar-width: 16rem;

.sidebar {
  position: relative;
  height: 100%;
  background-color: white;
  border-radius: 0 1rem 1rem 0;
  transition: 0.3s;
  width: $sidebar-width;

  &--open {
    right: 0;
  }

  &--closed {
    right: calc($sidebar-width - 2rem);
    border-radius: 0 2rem 2rem 0;
  }

  // SIDEBAR CONTENT
  &-content {
    height: 100%;
    transition: 0.3s;
    box-sizing: border-box;
    padding: 1rem;

    &__title {
      h3 {
        color: $color-primary;
        text-align: center;
        font-size: 1rem;
        font-weight: 700;
        margin: 0;
        margin-bottom: 1rem;
      }
    }

    &__content {
      display: flex;
      flex-direction: column;

    }
  }

  // SIDEBAR CONTROLLER
  &-controller {
    &__container {
      position: absolute;
      display: flex;
      height: 100%;
      width: 2rem;
      background-color: transparent;
      z-index: 10;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      left: 100%;
    }
  }
}

